sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/NameCardRenkeiMapping__c.object-meta.xml
<CustomObject>
    <label>名刺連携項目マッピング</label>
    <nameField>
        <displayFormat>RM-{000000}</displayFormat>
        <label>名刺連携項目マッピングNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>