sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/fields/BasicSetting__c.field-meta.xml
<CustomField>
    <fullName>BasicSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名刺基本設定</label>
    <referenceTo>NameCardBasicSetting__c</referenceTo>
    <relationshipLabel>名刺連携項目マッピング</relationshipLabel>
    <relationshipName>BasicSetting</relationshipName>
    <type>Lookup</type>
</CustomField>