sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/fields/NameCardLabel__c.field-meta.xml
<CustomField>
    <fullName>NameCardLabel__c</fullName>
    <description>未使用</description>
    <label>名刺の項目(ラベル)★未使用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>