sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/fields/TagetLabel__c.field-meta.xml
<CustomField>
    <fullName>TagetLabel__c</fullName>
    <description>未使用</description>
    <label>対象の項目(ラベル)★未使用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>