sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/fields/TargetName__c.field-meta.xml
<CustomField>
    <fullName>TargetName__c</fullName>
    <label>対象の項目(API名称)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>