sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <label>Account</label>
</RecordType>