sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/recordTypes/Lead2.recordType-meta.xml
<RecordType>
    <fullName>Lead2</fullName>
    <active>true</active>
    <label>Lead</label>
</RecordType>