sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiMapping__c/listViews/AllMappings.listView-meta.xml
<ListView>
    <fullName>AllMappings</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
    <language>ja</language>
</ListView>